--- a/index.html
+++ b/index.html
@@ -47,27 +47,41 @@ if (!breaches || breaches.length === 0) {
 }
 
 // Format the table
-document.getElementById("tbl").innerHTML = `
-  <table>
-    <tr>
-      <th>Date</th>
-      <th>Entity</th>
-      <th>Records</th>
-      <th>Portal</th>
-      ${breaches && breaches.length > 0 ? '<th>AI Summary</th>' : ''}
-    </tr>
-    ${displayData.map(r => `
+if (!displayData || displayData.length === 0) {
+  document.getElementById("tbl").innerHTML = `
+    <div style="padding: 20px; background-color: #f8f9fa; border-radius: 5px; text-align: center;">
+      <p>No breach data available. This could be because:</p>
+      <ul style="text-align: left; display: inline-block;">
+        <li>The GitHub Actions workflow hasn't run yet</li>
+        <li>The scrapers haven't found any new breaches</li>
+        <li>There might be an issue with the Supabase connection</li>
+      </ul>
+      <p>Check the GitHub Actions logs for more information.</p>
+    </div>
+  `;
+} else {
+  document.getElementById("tbl").innerHTML = `
+    <table>
       <tr>
-        <td>${r.notice_date || ""}</td>
-        <td>${r.entity || ""}</td>
-        <td class="${getSeverityClass(r.records)}">${formatNumber(r.records)}</td>
-        <td>${r._portal || ""}</td>
-        ${r.breach_ai ? `<td class="summary">${r.breach_ai.summary.text || ""}</td>` :
-          breaches && breaches.length > 0 ? '<td></td>' : ''}
+        <th>Date</th>
+        <th>Entity</th>
+        <th>Records</th>
+        <th>Portal</th>
+        ${breaches && breaches.length > 0 ? '<th>AI Summary</th>' : ''}
       </tr>
-    `).join("")}
-  </table>
-`;
+      ${displayData.map(r => `
+        <tr>
+          <td>${r.notice_date || ""}</td>
+          <td>${r.entity || ""}</td>
+          <td class="${getSeverityClass(r.records)}">${formatNumber(r.records)}</td>
+          <td>${r._portal || ""}</td>
+          ${r.breach_ai ? `<td class="summary">${r.breach_ai.summary.text || ""}</td>` :
+            breaches && breaches.length > 0 ? '<td></td>' : ''}
+        </tr>
+      `).join("")}
+    </table>
+  `;
+}
 
 // Helper functions
 function getSeverityClass(records) {
@@ -81,6 +95,46 @@ function formatNumber(num) {
   if (!num) return "0";
   return new Intl.NumberFormat().format(num);
 }
+
+// Add a debug section
+const debugInfo = document.createElement('div');
+debugInfo.style.marginTop = '30px';
+debugInfo.style.padding = '10px';
+debugInfo.style.backgroundColor = '#f8f9fa';
+debugInfo.style.borderRadius = '5px';
+debugInfo.style.fontSize = '14px';
+debugInfo.innerHTML = `
+  <details>
+    <summary style="cursor: pointer; font-weight: bold;">Debug Information</summary>
+    <div style="margin-top: 10px;">
+      <p>Supabase URL: ${supa.supabaseUrl}</p>
+      <p>Connection Status: <span id="connection-status">Checking...</span></p>
+      <p>Raw Data Count: <span id="raw-count">Checking...</span></p>
+      <p>AI Data Count: <span id="ai-count">Checking...</span></p>
+      <p>Last Updated: ${new Date().toLocaleString()}</p>
+    </div>
+  </details>
+`;
+document.body.appendChild(debugInfo);
+
+// Check connection status
+async function checkConnection() {
+  try {
+    const { count } = await supa.from('breach_raw').select('*', { count: 'exact', head: true });
+    document.getElementById('raw-count').textContent = count || 0;
+
+    const { count: aiCount } = await supa.from('breach_ai').select('*', { count: 'exact', head: true });
+    document.getElementById('ai-count').textContent = aiCount || 0;
+
+    document.getElementById('connection-status').textContent = 'Connected';
+    document.getElementById('connection-status').style.color = 'green';
+  } catch (error) {
+    document.getElementById('connection-status').textContent = `Error: ${error.message}`;
+    document.getElementById('connection-status').style.color = 'red';
+  }
+}
+
+checkConnection();
 </script>
 </body>
 </html>
